# omarchy-syncd

./: .gitignore  Cargo.toml  README.md  install.sh  logo.txt
.github/workflows/: release.yml
data/: bundles.toml
install/config/: all.sh  legacy.sh  paths.sh  run-cli.sh
install/helpers/: all.sh  chroot.sh  errors.sh  logging.sh  presentation.sh
install/packaging/: all.sh  binary.sh  helpers.sh  icon.sh  logo.sh  paths.sh  runtime.sh
install/post-install/: all.sh  elephant.sh  summary.sh
install/preflight/: all.sh  begin.sh  bootstrap.sh  dependencies.packages  dependencies.sh  dependencies_lib.sh  dependencies_prompt.sh  guard.sh  show-env.sh
lib/: config.sh  core.sh  fs.sh  git.sh  log.sh  ui.sh  update.sh
lib/cli/: backup.sh  config.sh  install.sh  menu.sh  restore.sh  uninstall.sh
lib/python/: config_tool.py
scripts/: build-release.sh  dev-check.sh  install.sh  lint.sh  omarchy-syncd-backup.sh  omarchy-syncd-config.sh  omarchy-syncd-install.sh  omarchy-syncd-menu.sh  omarchy-syncd-restore.sh  omarchy-syncd-uninstall.sh  omarchy-syncd-wrapper.sh  run-tests.sh  smoke-test.sh
src/: bundles.rs  config.rs  fs_ops.rs  git.rs  lib.rs  main.rs  selector.rs
templates/: launcher.sh  show-done.sh  show-logo.sh  syncd-update.sh
tests/: cli.rs  install_interactive.rs  install_release.rs  menu.rs  tty.rs
tests/bats/: backup.bats  config.bats  install.bats  install_interactive.bats  install_pty.bats  installer.bats  menu.bats  release.bats  restore.bats  uninstall.bats  update.bats
tests/interactive/: common.sh  install_cancel.exp  install_numeric.exp  (+3 more)
(+3 files in other folders)
