[package]
name = "omarchy-syncd"
version = "2.0.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
fs_extra = "1.3"
shellexpand = "3"
skim = { version = "0.10", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
walkdir = "2.5"
which = "5"
semver = "1"
ureq = { version = "2", features = ["tls"] }
chrono = { version = "0.4", features = ["clock"] }

[dev-dependencies]
assert_cmd = "2"
ptyprocess = "0.4"
nix = { version = "0.27", features = ["poll"] }
